--- a/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/files/hosts_template.j2
+++ b/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/files/hosts_template.j2
@@ -1,24 +1,14 @@
-{# # These are the satellite hosts #}
-{% if groups['satellites'] is defined %}
-[satellites]
-{% for host in groups['satellites'] %}
-{%      if cloud_provider == 'ec2' %}
-{{host}}
-{%      elif cloud_provider == 'osp' %}
-{{host}} ansible_host={{host}}.example.com
-{% endif %}
-{% endfor %}
-
-
-
 [all:vars]
-{# ###########################################################################
+###########################################################################
 ### Ansible Vars
-########################################################################### #}
+###########################################################################
 timeout=60
 ansible_become=yes
 ansible_user={{remote_user}}
+ansible_ssh_private_key_file="~/.ssh/{{guid}}key.pem"
+ansible_ssh_common_args="-o StrictHostKeyChecking=no"
 
-[all:children]
-satellites
-{% endif %}
+[nodes]
+{% for host in groups['nodes'] | default([]) %}
+{{ host }}.{{ chomped_zone_internal_dns }}
+{% endfor %}
