--- a/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/files/repos_template.j2
+++ b/ansible/configs/migrate-from-vmware-to-red-hat-infrastructure/files/repos_template.j2
@@ -1,43 +1,9 @@
-{% if groups['capsules'] is defined %}
-{% if inventory_hostname in groups['capsules'] %}
-{# capsule repos #}
-[rhel-7-server-rpms]
-name=Red Hat Enterprise Linux 7
-baseurl={{own_repo_path}}/{{repo_version}}/rhel-7-server-rpms
-enabled=1
-gpgcheck=0
-
-[rhel-server-rhscl-7-rpms]
-name=Red Hat Enterprise Linux 7 RHSCL
-baseurl={{own_repo_path}}/{{repo_version}}/rhel-server-rhscl-7-rpms
-enabled=1
-gpgcheck=0
-
-[rhel-7-server-ansible-2.6-rpms]
-name=Red Hat Enterprise Ansible 2.6
-baseurl={{own_repo_path}}/{{repo_version}}/rhel-7-server-ansible-2.6-rpms
-enabled=1
-gpgcheck=0
-
-[rhel-7-server-satellite-capsule-6.4-rpms]
-name=Red Hat Enterprise Satellite Capsule 6.4
-baseurl={{own_repo_path}}/{{repo_version}}/rhel-7-server-satellite-capsule-6.4-rpms
-enabled=1
-gpgcheck=0
-
-[rhel-7-server-satellite-maintenance-6-rpms]
-name=Red Hat Enterprise Satellite 6 Maintenance
-baseurl={{own_repo_path}}/{{repo_version}}/rhel-7-server-satellite-maintenance-6-rpms
-enabled=1
-gpgcheck=0
-
-
-[rhel-7-server-satellite-tools-6.4-rpms]
-name=Red Hat Enterprise Linux Satellite tools 6.4
-baseurl={{own_repo_path}}/{{repo_version}}/rhel-7-server-satellite-tools-6.4-rpms
-enabled=1
-gpgcheck=0
-
-{% endif %}
-{% endif %}
-
+{% for yum_repository in yum_repositories %}
+  {% for id, attrs in yum_repository.items() %}
+[{{ id }}]
+name={{ attrs.name }}
+baseurl={{ attrs.baseurl }}
+enabled={{ 1 if attrs.enabled else 0 }}
+gpgcheck={{ 1 if attrs.gpgcheck else 0 }}
+  {% endfor %}
+{% endfor %}
